# quera-test-case-generator

./: CMakeLists.txt  DraggableButton.cpp  DraggableButton.hpp  MainWindow.cpp  MainWindow.hpp  README.md  TestCase.cpp  TestCase.hpp  main.cpp
